[metadata]
name = qclobot
version = attr: qclobot.__version__.__version__
description = building initial guess scripts based on QCLO for the ProteinDF
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
author = Toshiyuki HIRANO
author_email = hiracchi@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Utilities


[options]
zip_safe = False
include_package_data = True
packages = qclobot
scripts = 
    scripts/qclo_sample.py
    scripts/QCLObot.py
    scripts/QCLObot_opt.py
    scripts/QCLObot_modeler.py
    scripts/relax_protein.py
    scripts/relax_protein.sh
    scripts/remove_wat.py
    scripts/qc-info-frame.py
    scripts/qc-frame-molecule.py
    scripts/qc-frame-checkconv.py
    scripts/qc-frame-orb.py
    scripts/resp-charge.py
install_requires =
    configparser
    jinja2
    rich

